# MultiDly

./: .gitignore  CMakeLists.txt  MultiDly.jucer  README.md
Builds/CLion/: CMakeLists.txt  Release-Info-AAX.plist  Release-Info-AU.plist  Release-Info-Standalone_Plugin.plist  Release-Info-VST3.plist
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AAX.plist  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
Builds/MacOSX/multidly.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: CMakeLists.txt  DlyTapComponent.cpp  DlyTapComponent.h  FXComponent.cpp  FXComponent.h  MultiDlyDisplay.cpp  MultiDlyDisplay.h  MultiDlyDisplayStateManager.cpp  MultiDlyDisplayStateManager.h  MultiDlyTap.cpp  MultiDlyTap.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TapEditorComponent.cpp  TapEditorComponent.h  TapViewer.cpp  TapViewer.h  TopBarComponent.cpp  TopBarComponent.h  multiDlyEngine.cpp  multiDlyEngine.h
doxygen/: doxygenConfig
doxygen/docs/html/: _delay_tap_component_8h_source.html  _multi_dly_display_8h_source.html  _multi_dly_display_state_manager_8h_source.html  _multi_dly_tap_8h_source.html  _plugin_editor_8h_source.html  _plugin_processor_8h_source.html  annotated.html  class_delay_tap_component-members.html  class_delay_tap_component.html  class_multi_dly_audio_processor-members.html  class_multi_dly_audio_processor.html  class_multi_dly_audio_processor_editor-members.html  class_multi_dly_audio_processor_editor.html  class_multi_dly_display-members.html  class_multi_dly_display.html  class_multi_dly_display_state_manager-members.html  class_multi_dly_display_state_manager.html  class_multi_dly_engine-members.html  class_multi_dly_engine.html  class_multi_dly_tap-members.html  class_multi_dly_tap.html  classes.html  dir_74389ed8173ad57b461b9d623a1f3867.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  hierarchy.html  index.html  menudata.js  multi_dly_engine_8h_source.html
doxygen/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  enums_0.js  (+13 more)
doxygen/docs/latex/: annotated.tex  class_delay_tap_component.eps  class_delay_tap_component.tex  class_multi_dly_audio_processor.eps  class_multi_dly_audio_processor.tex  class_multi_dly_audio_processor_editor.eps  class_multi_dly_audio_processor_editor.tex  class_multi_dly_display.eps  class_multi_dly_display.tex  class_multi_dly_display_state_manager.tex  class_multi_dly_engine.tex  class_multi_dly_tap.tex  hierarchy.tex  refman.tex
(+5 files in other folders)
